src/tests/snapshots/hebi__tests__fn_call_default__default_pos.snap
---
source: src/tests/fn_call_default.rs
expression: snapshot
---
# Modules:


# Input:
fn f(a=10):
  print a

f()
f(1)


# Result (success):
none

# Stdout:
10
1


