src/tests/snapshots/hebi__tests__fn_call_default__default_pos_too_many_args.snap
---
source: src/tests/fn_call_default.rs
expression: snapshot
---
# Modules:

            
# Input:
fn f(a=10):
  print a

f(1,2)


# Result (error):
expected at most 1 args, got 2

# Stdout:


