src/tests/snapshots/hebi__tests__fn_call_default__pos_and_default_pos.snap
---
source: src/tests/fn_call_default.rs
expression: snapshot
---
# Modules:


# Input:
fn f(a, b=10):
  print a, b

f(1)
f(1,2)


# Result (success):
none

# Stdout:
1 10
1 2


