src/tests/snapshots/hebi__tests__fn_call_default__pos_and_default_pos_not_enough_args.snap
---
source: src/tests/fn_call_default.rs
expression: snapshot
---
# Modules:

            
# Input:
fn f(a, b=10):
  print a

f()


# Result (error):
In code at 0..0
Error: missing required positional params: a


# Stdout:


