src/tests/snapshots/hebi__tests__fn_call_default__pos_and_default_pos_too_many_args.snap
---
source: src/tests/fn_call_default.rs
expression: snapshot
---
# Modules:

            
# Input:
fn f(a, b=10):
  print a

f(1,2,3)


# Result (error):
expected at most 2 args, got 3

# Stdout:


